@@ -6,7 +6,7 @@
 ## Author:  Yoshinari Nomura <nom@quickhack.net>
 ##
 ## Created: 1999/09/01
-## Revised: $Date: 2000/08/05 19:51:58 $
+## Revised: $Date: 2004/05/27 01:42:57 $
 ##
 
 # $DEBUG = 1
@@ -253,8 +253,8 @@ class MhcScheduleEdit < GtkToplevel
       @sch .set_duration(b, e)
       @date_box .update
     }
-    @subj_ent = GtkEntry .new("Subject:  ") .border_width = 3
-    @cat_ent  = GtkEntry .new("Category: ") .border_width = 3
+    @subj_ent = GtkEntry .new("Subject:  ") .border_width(3)
+    @cat_ent  = GtkEntry .new("Category: ") .border_width(3)
 
     @subj_ent .signal_connect('changed'){
       @sch .set_subject(Kconv::tojis(@subj_ent .dump))
