@@ -1,3 +1,8 @@
+2004-05-27  Yoshiaki Kasahara  <kasahara@nc.kyushu-u.ac.jp>
+
+	* gemcal.in (MhcScheduleEdit::initialize): Fix arguments for
+	border_width.
+
 2004-05-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* emacs/mhc-gnus.el (mhc-gnus-summary-mode-setup): Reset caches
